# melarin

./: Makefile  pyproject.toml
src/melarin/: __init__.py  base.py  builtins.py
src/melarin/plugins/: numpy.py  pandas.py
tests/: test_msgspec.py
