[project]
name = "melarin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chou Hung-Yi", email = "hychou.svm@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "msgpack>=1.1.2",
]

[project.scripts]
melarin = "melarin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.9",
]
