[project]
name = "melarin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chou Hung-Yi", email = "hychou.svm@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "msgpack>=1.1.2",
]

[project.scripts]
melarin = "melarin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "fastparquet>=2024.11.0",
    "ipython>=8.18.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.9",
]
[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'raise ElarinBugError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    "except ImportError:",
    "warnings.warn.*ElarinBugError",
]
